finished html part and bundler

--- a/sinatra_proj/views/index.erb
+++ b/sinatra_proj/views/index.erb
@@ -1,6 +1,14 @@
 <html>
-  <head></head>
+  <head>
+  	<link type="text/css" rel="stylesheet" href="css/dec.css">
+  </head>
   <body>
-  <div> Sinatra Project </div>
-  </body>
+    <div id = "main_div"> 
+    <h1>Sinatra Project</h1>
+      <div id = "options">
+        <button type="button" id="caesar_button"> Caesar Cipher </button>
+        <button type="button" if="hangman"> Hang Man </button>
+      </div>
+    </div>
+  </body
 </html>
