--- a/sinatra_proj/views/index.erb
+++ b/sinatra_proj/views/index.erb
@@ -1,6 +1,8 @@
 <html>
   <head>
   	<link type="text/css" rel="stylesheet" href="css/dec.css">
+  	<script src="scripts/jquery-3.1.1.js"></script>
+    <script src="scripts/src.js"></script>
   </head>
   <body>
     <div id = "main_div"> 
