--- a/sinatra_proj/views/index.erb
+++ b/sinatra_proj/views/index.erb
@@ -2,14 +2,14 @@
   <head>
   	<link type="text/css" rel="stylesheet" href="css/dec.css">
   	<script src="scripts/jquery-3.1.1.js"></script>
-    <script src="scripts/src.js"></script>
+    <script src="scripts/index.js"></script>
   </head>
   <body>
     <div id = "main_div"> 
     <h1>Sinatra Project</h1>
       <div id = "options">
         <button type="button" id="caesar_button"> Caesar Cipher </button>
-        <button type="button" if="hangman"> Hang Man </button>
+        <button type="button" id="hangman"> Hang Man </button>
       </div>
     </div>
   </body
