--- a/sinatra_proj/views/caesar_cipher.erb
+++ b/sinatra_proj/views/caesar_cipher.erb
@@ -5,11 +5,15 @@
        <script src="scripts/caesar.js"></script> 
   </head>
   <body>
-    <div id = "main_div"> 
+    <div id = "main_div_c"> 
     <h1>Caesar Cipher</h1>
-        <input type="number" id="vals" value="5">
+        String: <input type="text" id="str" >
+        Number: <input type="number" id="vals" value="5">
         <button type="button" id="apply">APPLY</button>
-        <div id = "output_caesar"> </div>      
+        <div id = "output_caesar"> 
+        <p id = "caesar_string"></p>
+        </div>      
     </div>
+    <button type="button" id="back_to_main">BACK</button>
   </body
 </html>
