--- a/sinatra_proj/views/caesar_cipher.erb
+++ b/sinatra_proj/views/caesar_cipher.erb
@@ -5,13 +5,18 @@
        <script src="scripts/caesar.js"></script> 
   </head>
   <body>
-    <div id = "main_div_c">     
+    <div id = "main_div_c"> 
+
     <h1>Caesar Cipher</h1>
-        String: <input type="text" id="str" >
-        Number: <input type="number" id="vals" value="5">
-        <button type="button" id="apply">APPLY</button>
+
+      <form method="post" action="/runCaesar">
+        String: <input type="text" id="str" name = "str" >
+        Number: <input type="number" id="vals" value="5" name = "vals">
+        <button type="submit" id="apply">APPLY</button>
+      </form>
+
         <div id = "output_caesar"> 
-        <p id = "caesar_string"></p>
+        <p id = "caesar_string"><%= translation %></p>
         </div>      
     </div>
     <button type="button" id="back_to_main">BACK</button>
