--- a/sinatra_proj/views/caesar_cipher.erb
+++ b/sinatra_proj/views/caesar_cipher.erb
@@ -1,8 +1,6 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="/css/dec.css">
-  	   <script src="scripts/jquery-3.1.1.js"></script>
-       <script src="scripts/caesar.js"></script> 
   </head>
   <body>
     <div id = "main_div_c"> 
@@ -19,6 +17,9 @@
         <p id = "caesar_string"><%= translation %></p>
         </div>      
     </div>
-    <button type="button" id="back_to_main">BACK</button>
+    
+      <form method="post" action="/backMenu">
+        <button type="submit" id="back_to_main">BACK</button>
+      </form>
   </body
 </html>
