--- a/sinatra_proj/views/index.erb
+++ b/sinatra_proj/views/index.erb
@@ -1,15 +1,17 @@
 <html>
   <head>
   	<link rel="stylesheet" type="text/css"  href="/css/dec.css">
-  	<script src="/scripts/jquery-3.1.1.js"></script>
-    <script src="/scripts/index.js"></script>
   </head>
   <body>
     <div id = "main_div"> 
     <h1>Sinatra Project</h1>
       <div id = "options">
-        <button type="button" id="caesar_button"> Caesar Cipher </button>
-        <button type="button" id="hangman"> Hang Man </button>
+      <form method="post" action="/caesar_but">
+        <button type="submit" id="caesar_button"> Caesar Cipher </button>
+      </form>
+      <form method="post" action="/hangman_but">
+        <button type="submit" id="hangman"> Hang Man </button>
+      </form>
       </div>
     </div>
   </body
