added hangman pictures

--- a/sinatra_proj/views/hang_man.erb
+++ b/sinatra_proj/views/hang_man.erb
@@ -8,12 +8,12 @@
     <h1>HANGMAN</h1>
 
       <form method="post" action="/runHangman">
-        GUESS THE LETTER: <input type="text" id="str" name = "str" >
-        <button type="submit" id="apply">APPLY</button>
+        LETTER: <input type="text" id="str" name = "str" >
+        <button type="submit" id="apply">GUESS!</button>
       </form>
 
         <div id = "output_hangman"> 
-          <p id = "caesar_string"><%= output %></p>
+          <p id = "hang_out"><%= output %></p>
         </div>      
     </div>
     
