--- a/sinatra_proj/views/hang_man.erb
+++ b/sinatra_proj/views/hang_man.erb
@@ -6,15 +6,22 @@
     <div id = "main_div_h"> 
 
     <h1>HANGMAN</h1>
-
-      <form method="post" action="/runHangman">
+    <h2> _ _ _ _ _ _ </h2>    
+    <form method="post" action="/runHangman">
         LETTER: <input type="text" id="str" name = "str" >
         <button type="submit" id="apply">GUESS!</button>
-      </form>
+    </form>
 
-        <div id = "output_hangman"> 
-          <p id = "hang_out"><%= output %></p>
-        </div>      
+    <div class = "stats">
+      <p id ="stats">Guess: 0 </p>   
+      <p id ="stats">Turns: 0 </p>
+      <p id ="stats">Missed: 0</p>
+    </div>
+
+    <div id = "output_hangman"> 
+      <p id = "hang_out"><%= output %></p>
+    </div>      
+
     </div>
     
       <form method="post" action="/backMenu">
