--- a/sinatra_proj/views/hang_man.erb
+++ b/sinatra_proj/views/hang_man.erb
@@ -6,17 +6,25 @@
     <div id = "main_div_h"> 
 
     <h1>HANGMAN</h1>
+    <% if @play == false%>
+    <form method="post" action="/playHangman">
+        <button type="submit" id="apply">PLAY GAME</button>
+    </form>
+    <% end%>
+
+    <% if @play%>
     <h2><%= secret_code %></h2>    
     <form method="post" action="/runHangman">
         LETTER: <input type="text" id="str" name = "str" >
         <button type="submit" id="apply">GUESS!</button>
     </form>
-
-    <div class = "stats">
-      <p id ="stats">Guess: <%= guess%></p>   
-      <p id ="stats">Turns: <%= turns%></p>
-      <p id ="stats">Missed: <%= missed%></p>
-    </div>
+    
+      <div class = "stats">
+        <p id ="stats">Guess: <%= guess%></p>   
+        <p id ="stats">Turns: <%= turns%></p>
+        <p id ="stats">Missed: <%= missed%></p>
+      </div>
+    <%end%>
 
     <div id = "output_hangman"> 
       <p id = "hang_out"><%= output %></p>
