refactoed some main.rb code

--- a/sinatra_proj/views/hang_man.erb
+++ b/sinatra_proj/views/hang_man.erb
@@ -12,7 +12,7 @@
     </form>
     <% end%>
 
-    <% if @play%>
+    <% if @play == true%>
     <h2><%= secret_code %></h2>    
     <form method="post" action="/runHangman">
         LETTER: <input type="text" id="str" name = "str" >
