--- a/sinatra_proj/views/hang_man.erb
+++ b/sinatra_proj/views/hang_man.erb
@@ -12,7 +12,7 @@
     </form>
     <% end%>
 
-    <% if @play == true%>
+    <% if @play == true  && @@game.win? == false && @@game.lose? == false%>
     <h2><%= secret_code %></h2>    
     <form method="post" action="/runHangman">
         LETTER: <input type="text" id="str" name = "str" >
@@ -20,9 +20,9 @@
     </form>
     
       <div class = "stats">
-        <p id ="stats">Guess: <%= guess%></p>   
+        <p id ="stats">Misses: <%= guess%></p>   
         <p id ="stats">Turns: <%= turns%></p>
-        <p id ="stats">Missed: <%= missed%></p>
+        <p id ="stats">Guessed Letters: <%= missed%></p>
       </div>
     <%end%>
 
