--- a/sample_app/app/views/static_pages/home.html.erb
+++ b/sample_app/app/views/static_pages/home.html.erb
@@ -11,9 +11,9 @@
 
 <%= link_to image_tag("rails.png", alt: "Rails logo"), 
 'http://rubyonrails.org/' %>
-<%= link_to image_tag("kitten.jpg", alt: "Kitten Picture") %>
+<%#= link_to image_tag("kitten.jpg", alt: "Kitten Picture") %>
 
-<a href="#" class="btn btn-lg btn-primary"> Sign up now! </a>
+
 
 
 
