finish layouts and routes

--- a/sample_app/app/views/layouts/_footer.html.erb
+++ b/sample_app/app/views/layouts/_footer.html.erb
@@ -2,6 +2,7 @@
   <small>
     The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
     by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
+    also rebuilt by <a href="https://github.com/NuclearMachine/">Nuclear Machine </a>
   </small>
   <nav>
     <ul>
