--- a/sample_app/app/views/users/new.html.erb
+++ b/sample_app/app/views/users/new.html.erb
@@ -1,2 +1,2 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<% provide(:title, 'Sign up') %>
+<p>This will be a signup page for new users</p>
