--- a/getting_started/blog/app/views/articles/index.html.erb
+++ b/getting_started/blog/app/views/articles/index.html.erb
@@ -13,6 +13,9 @@
       <td><%= article.title %> </td>
       <td><%= article.text %> </td>
       <td><%= link_to 'Show', article_path(article) %> </td>
+      <td><%= link_to 'Edit', edit_article_path(article) %> </td>
+      <td><%= link_to 'Delete', article_path(article), method: :delete,
+          data: {confirm: "Delete #{article.title}?"} %> </td>
     </tr>
   <% end %>
 </table>
