--- a/getting_started/blog/app/views/articles/show.html.erb
+++ b/getting_started/blog/app/views/articles/show.html.erb
@@ -7,6 +7,8 @@
   <strong>TEXT: </strong>
   <%= @article.text %>
 </p>
+<%= render 'article_comments'%>
+<%= render 'new_comment' %>
 
 <%= link_to 'Edit', articles_path %>
 <%= link_to 'Back', articles_path %>
