--- a/re-former/app/views/users/_user_form.html.erb
+++ b/re-former/app/views/users/_user_form.html.erb
@@ -40,3 +40,26 @@
 
 
 
+
+
+
+
+
+
+<!-- <form accept-charset="UTF-8" action="/users" method="post">
+   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+
+    <label for="username"> Username: </label>
+    <input id="username" name= "user[username]" type="text">
+
+    <label for="email:"> Email: </label>
+    <input id="email:" name= "user[email]" type="text">
+
+    <label for="password"> Password: </label>
+    <input id="password" name= "user[password]" type="password">
+
+    <label for="password_confirmation"> Password Confirmation: </label>
+    <input if="password_confirmation" name= "user[password_confirmation" type="password">
+
+    <input type="submit" value="Submit">
+</form> -->
