--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -4,6 +4,24 @@
 
 $gray-light: #777;
 
+$gray-medium-light: #eaeaea;
+
+@mixin box_sizing {
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
+}
+
+/* miscellaneous */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
+}
+
 /* universal */
 body {
 	padding-top: 60px;
@@ -71,12 +89,6 @@ p {
 	  text-decoration: none;
 	}
 }
-
-
-img {
-	display:none;
-}
-
 
 /* footer */
 
