finished basic barebones such as login,signup,and homepage though no tests

--- a/private_events/app/views/layouts/_footer.html.erb
+++ b/private_events/app/views/layouts/_footer.html.erb
@@ -1,14 +1,7 @@
 <footer class="footer">
-  <small>
-    The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
-    also rebuilt by <a href="https://github.com/NuclearMachine/">Nuclear Machine </a>
-  </small>
-  <nav>
-    <ul>
-      <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
-    </ul>
-  </nav>
+	<small>
+	  "Members-only" built by <a href="https://github.com/NuclearMachine/">NuclearMachine</a> 
+	  for the <a href="http://www.theodinproject.com/courses/ruby-on-rails/lessons/associations">
+	  OdinProject Basic associations exercise</a>
+	</small>
 </footer>
