--- a/private_events/app/views/layouts/_header.html.erb
+++ b/private_events/app/views/layouts/_header.html.erb
@@ -1,29 +1,28 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
+  <div class="container">    
     <nav>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Help", help_path %></li>
-        <% if logged_in? %>
-          <li><%= link_to "Users", users_path %></li>
+      <ul class="nav navbar-nav navbar-right">      
+        <% if logged_in? %>                 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
             </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+            <ul class="dropdown-menu">       
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", logout_path, method: "delete" %>
               </li>
             </ul>
-          </li>
+          </li>          
         <% else %>
           <li><%= link_to "Log in", login_path %></li>
         <% end %>
       </ul>
+      <ul class="nav navbar-nav navbar-left">
+        <li><%= link_to "Home", root_url %> </li>  
+        <li><%# logged_in? ? link_to("Post",post_path) : link_to("Post", login_path) %>
+      </ul>
+
     </nav>
   </div>
 </header>
