--- a/private_events/app/views/layouts/application.html.erb
+++ b/private_events/app/views/layouts/application.html.erb
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
+    <title><%= yield(:title) %></title>
     <%= render 'layouts/rails_default' %>
     <%= render 'layouts/shim' %>
   </head>
-  
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
-      <% flash.each do |message_type, message| %>
-         <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
-      <% end %>
-      <%= yield %>
-      <%= render 'layouts/footer' %>
-      <%= debug(params) if Rails.env.development? %>
+    	<%= render 'layouts/flash_messages' %>
+    	<%= yield %>
+    	<%= render 'layouts/footer' %>
+    	<%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
