--- a/private_events/app/views/users/_form.html.erb
+++ b/private_events/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@user, url:  yield(:to_url)) do |f| %>
-  <%= render 'shared/error_messages' %>
+  <%= render 'shared/error_messages', object: f.object%>
 
   <%= f.label :username %>
   <%= f.text_field :username, class: 'form-control' %>
