--- a/private_events/app/views/layouts/_header.html.erb
+++ b/private_events/app/views/layouts/_header.html.erb
@@ -2,12 +2,13 @@
   <div class="container">    
     <nav>
       <ul class="nav navbar-nav navbar-right">      
-        <% if logged_in? %>                 
+        <% if logged_in? %>                        
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
             </a>
-            <ul class="dropdown-menu">       
+            <ul class="dropdown-menu"> 
+              <li><%= link_to current_user.username, current_user%></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", logout_path, method: "delete" %>
@@ -19,8 +20,7 @@
         <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-left">
-        <li><%= link_to "Home", root_url %> </li>  
-        <li><%# logged_in? ? link_to("Post",post_path) : link_to("Post", login_path) %>
+        <li><%= link_to "#{logged_in? ? "Dashboard" : "Welcome Page"}", root_url %> </li>  
       </ul>
 
     </nav>
