almost finished event mvc

--- a/private_events/app/views/static_pages/_my_events.erb
+++ b/private_events/app/views/static_pages/_my_events.erb
@@ -1,7 +1,7 @@
 <% if @events_feed.any? %>
   <h3>Events (<%= @current_user.events.count %>) </h3>
   <ol class = "microposts">
-    <%= render @events %>
+    <%= render @events_feed %>
   </ol>
   <%= will_paginate @events_feed %>
 <% else %>
