--- a/private_events/app/views/static_pages/home.html.erb
+++ b/private_events/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% if logged_in? %>
-    <% provide(:title, "Events") %>
+    <% provide(:title, "Events Dashboard") %>
 	<%= render "static_pages/events_board" %>
 <% else %>
 	<% provide(:title, "Welcome Page") %>
