--- a/private_events/app/views/users/show.html.erb
+++ b/private_events/app/views/users/show.html.erb
@@ -9,9 +9,9 @@
   </aside>
   <div class="col-md-8">
   	<% if @user.events.any? %>
-  		<h3>Events (<%= @user.microposts.count %>) </h3>
+  		<h3>Events (<%= @user.events.count %>) </h3>
   		<ol class = "microposts">
-  			<%= render @events %>
+  			<%= render @user.events %>
   		</ol>
   		<%= will_paginate @events %>
   	<% end %>
