--- a/private_events/app/assets/stylesheets/custom.scss
+++ b/private_events/app/assets/stylesheets/custom.scss
@@ -221,16 +221,14 @@ input {
   }
   .content {
     display: block;
-    margin-left: 60px;
-    img {
-      display: block;
-      padding: 5px 0;
-    }
+    margin-top: 7px;
+    margin-left: 10px;
   }
   .timestamp {
     color: $gray-light;
     display: block;
-    margin-left: 60px;
+    margin-top: 7px;
+    margin-left: 5px;
   }
   .gravatar {
     float: left;
