--- a/private_events/app/views/shared/_event_form.html.erb
+++ b/private_events/app/views/shared/_event_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_for(@event) do |f| %>
 	<%= render 'shared/error_messages', object: f.object %>
 
-	<%= f.label :title%>
-	<%= f.text_field :title, class: 'form-control'%>
+	<%= f.text_field :title, placeholder: "Title", class: 'form-control'%>
 
 	<div class="field">
-		<%= f.text_area :description, placeholder: "This event is about....." %>
+		<%= f.text_area :description, placeholder: "This event is about.....",
+		class: 'form-control' %>
 	</div>
 
 	<%= f.submit "Create Event", class: "btn btn-primary" %>
