--- a/private_events/app/views/static_pages/_events_board.html.erb
+++ b/private_events/app/views/static_pages/_events_board.html.erb
@@ -6,11 +6,12 @@
     </section>
 
     <section class="micropost_form">
-      <%= render 'event_form' %>
+      <h3>Create Event</h3>
+      <%= render 'shared/event_form' %>
     </section>
     
   </aside>
   <div class="col-md-8">
-    <%= render 'my_events' %>
+    <%= render 'static_pages/my_events' %>
   </div>
 </div>
