completed event formation and invitation mvc

--- a/private_events/app/views/events/show.html.erb
+++ b/private_events/app/views/events/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Events#show</h1>
-<p>Find me in app/views/events/show.html.erb</p>
+<div class="row">
+  <aside class="col-md-4">
+   <%= render 'events/show/attendees' %>
+  </aside>
+  <div class="col-md-8">
+   <%= render 'events/show/event_details' %>
+  </div> 
+</div>
+
