--- a/private_events/app/assets/stylesheets/custom.scss
+++ b/private_events/app/assets/stylesheets/custom.scss
@@ -35,8 +35,13 @@ textarea {
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
+}
 
-
+h1 {
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 h2 {
@@ -46,6 +51,11 @@ h2 {
   text-align: center;
   font-weight: normal;
   color: $gray-light;
+}
+
+h5 {
+  font-size: 1.5em;
+  margin-top: 30px;
 }
 
 p {
