--- a/private_events/app/views/events/_event.html.erb
+++ b/private_events/app/views/events/_event.html.erb
@@ -2,7 +2,14 @@
 	<span class="user">
 	<h3><%= link_to event.title, event %></h3>
 	<span class="content"><p><%= event.description %></p></span>
-	<span class="timestamp">
-		<h6>created <%= time_ago_in_words(event.created_at) %> ago by <%= link_to event.creator.username, event.creator %> </h6>
+	<span class="timestamp">		
+		<h6>created <%= time_ago_in_words(event.created_at) %> ago by <%= link_to event.creator.username,
+		 event.creator %> 
+		 <%if !event_ended?(event) %>
+		 	(starts in <%= time_ago_in_words(event.event_start_date)%>)
+		 <% else %>
+		 	(event has ended)
+		 <%end%>
+		 </h6>
 	</span>
 </li>
