--- a/private_events/app/views/layouts/_header.html.erb
+++ b/private_events/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">    
+  <%= link_to "PRIVATE EVENTS", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">      
         <% if logged_in? %>                        
