--- a/private_events/app/views/shared/_attendee.html.erb
+++ b/private_events/app/views/shared/_attendee.html.erb
@@ -1,7 +1,10 @@
-<li> 
-<%= link_to attendee.invited_user, username_to_user(attendee.invited_user) %> 
-<% if attendee.attended_event.creator == current_user%> <%#will show kick when you are event creator%>
-<h2> <%= link_to "kick user", kick_user_path(username_to_user(attendee.invited_user)), method: :delete %></h2>
+<% @attendees.each do |attendee| %>
+  
+  <li> 
+    <%= link_to attendee.invited_user, username_to_user(attendee.invited_user) %>   
+    <% if attendee.attended_event.creator == current_user%> <%#will show kick when you are event creator%>
+  	  <%= link_to "[kick]", invitation_path(attendee,referrer: "events page"), method: :delete %>
+    <%end%>  
+  </li>
+
 <%end%>
-</li>
-	
