--- a/private_events/app/views/layouts/_header.html.erb
+++ b/private_events/app/views/layouts/_header.html.erb
@@ -3,7 +3,13 @@
   <%= link_to "PRIVATE EVENTS", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">      
-        <% if logged_in? %>                        
+        <% if logged_in? %>      
+          <% if current_user_invitations.any?%>
+            <li><%= link_to "Invitations(#{current_user_invitations.count})", invitations_path %> </li>
+          <%else%>  
+            <li><%= link_to "Invitations", invitations_path%> </li>
+          <%end%>
+
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
