--- a/private_events/app/views/layouts/_header.html.erb
+++ b/private_events/app/views/layouts/_header.html.erb
@@ -28,6 +28,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-left">
         <li><%= link_to "#{logged_in? ? "Dashboard" : "Welcome Page"}", root_url %> </li>  
+        <li><%= link_to "Events", events_path%> </li>
       </ul>
 
     </nav>
