fixed minor typo in private-events footer

--- a/private_events/app/views/layouts/_footer.html.erb
+++ b/private_events/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
 	<small>
-	  "Members-only" built by <a href="https://github.com/NuclearMachine/">NuclearMachine</a> 
+	  "Private events" built by <a href="https://github.com/NuclearMachine/">NuclearMachine</a> 
 	  for the <a href="http://www.theodinproject.com/courses/ruby-on-rails/lessons/associations">
 	  OdinProject Basic associations exercise</a>
 	</small>
