--- a/odin-flight-booker/app/views/layouts/_footer.html.erb
+++ b/odin-flight-booker/app/views/layouts/_footer.html.erb
@@ -2,6 +2,6 @@
 	<small>
 	  "Odin flight booker" built by <a href="https://github.com/NuclearMachine/">NuclearMachine</a> 
 	  for the <a href="http://www.theodinproject.com/courses/ruby-on-rails/lessons/building-advanced-forms">
-	  OdinProject Basic associations exercise</a>
+	  OdinProject advanced forms exercise</a>
 	</small>
 </footer>
