--- a/odin-flight-booker/app/views/flights/_flight_form.html.erb
+++ b/odin-flight-booker/app/views/flights/_flight_form.html.erb
@@ -1,21 +1,19 @@
-
 <%= form_tag("/flights", method: "get") do %>
   
-  <%= label_tag(:departed_from) %>  
-  <%= select_tag((:departed_from),options_for_select(@flights_from_list), class: "form-control", 
+  <%= label_tag("Departed from") %>  
+  <%= select_tag(("flights[departed_from]"),options_for_select(@flights_from_list), class: "form-control", 
   	prompt: "select airport")%>
 
-  <%= label_tag(:arriving_to) %>  
-  <%= select_tag((:arriving_to),options_for_select(@flights_to_list), class: "form-control",
+  <%= label_tag("Arriving to") %>  
+  <%= select_tag(("flights[arriving_to]"),options_for_select(@flights_to_list), class: "form-control",
   	prompt: "select airport")%>
 
-  <%= label_tag(:departure_date) %>
-  <%= select_tag((:departure_date),options_for_select(@departure_dates_to_list), class: "form-control", 
-  	prompt: "")%>
+  <%= label_tag("Departure date") %>
+  <%= select_tag(("flights[departure_date]"),options_for_select(@departure_dates_to_list),
+    class: "form-control", prompt: "")%>
 
-  <%= label_tag(:number_of_passengers) %>
-  <%= select_tag((:number_of_passengers),options_for_select(@number_of_passengers),class: "form-control") %>
+  <%= label_tag("Number of passengers") %>
+  <%= select_tag(("flights[number_of_passengers]"),options_for_select(@number_of_passengers),class: "form-control") %>
 
   <%= submit_tag("search", class: "btn btn-primary") %>
 <% end %>
-
